clusters/core/env/production/kube-system/cilium/hubble/ingressroute.hubble.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hubble.${FAMILY_DOMAIN}`)"
      priority: 10
      middlewares:
        - name: oauth-auth
          namespace: auth-system
        - name: oauth-errors
          namespace: auth-system
      services:
        - name: hubble-ui
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: hubble.${FAMILY_DOMAIN}
